final ejercicios de listas

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <h1><strong>Programación Web Full Stack</strong></h1><br>
-    <h2><strong>Módulos de la cursada</strong></h2><br>
+    <h2><strong>Módulos de la cursada</strong></h2>
     <ol>
-       
         <li> Diseño Web:
         <ul>
             <li>HTML</li>
@@ -44,7 +43,7 @@
             <li>Clases de Repasos</li>
         </ul>
         </li> <br>
-        <li><strong>Contenido Teorico-practico:</strong> 
+        <li><strong>Contenido Teorico-practico:</strong> <br>
             <ul>
                 <li>teorico
                     <ul>
